@@ -29,7 +29,7 @@
 
 <tr NOSAVE>
 <td NOSAVE>
-<br><a NAME="News"></a><b><u>News</u></b>: 
+<br><a NAME="News"></a><b>News</b>: 
 <ul>
  <li>
   A new <a href="membership-policy.html">membership qualification 
@@ -45,7 +45,7 @@
 </ul>
 
 <p>
- <a NAME="Introduction"></a><b><u>Introduction:</u></b>&nbsp; The GNOME
+ <a NAME="Introduction"></a><b>Introduction</b>&nbsp; <br>The GNOME
  project has built a complete free and easy-to-use desktop environment for
  the user, as well as a powerful application framework for the software
  developer. GNOME is part of the <a href="http://www.gnu.org/">GNU project</a>,
@@ -67,31 +67,32 @@
 </p>
 
 <p>
- <a NAME="Board of Directors"></a><b><u>Board of Directors</u></b>
+ <a NAME="Board of Directors"></a><b>Board of Directors</b>
  <br>The GNOME Foundation is run by a Board of Directors, which was elected
- by the entire GNOME community and consists of <u>Miguel de Icaza</u>, <u>Bart
- Decrem</u>, <u>Jim Gettys</u>, <u>John Heard</u>, <u>Raph Levien</u>, 
- <u>Federico Mena Quintero</u>, <u>Dan Mueth</u>, <u>Havoc Pennington</u>, 
- <u>Maciej Stachowiak</u>, <u>Owen Taylor</u>and <u>Daniel Veillard</u>.
- If you would like to contact the Board of Directors, you can email them
- at <a href="mailto:board@gnome.org">board@gnome.org</a>.
+ by the entire GNOME community and consists of <em>Miguel de Icaza</em>, 
+ <em>Bart Decrem</em>, <em>Jim Gettys</em>, <em>John Heard</em>, 
+ <em>Raph Levien</em>, <em>Federico Mena Quintero</em>, <em>Dan Mueth</em>, 
+ <em>Havoc Pennington</em>, <em>Maciej Stachowiak</em>, <em>Owen Taylor</em>
+ and <em>Daniel Veillard</em>.  If you would like to contact the Board 
+ of Directors, you can email them at <a 
+ href="mailto:board@gnome.org">board@gnome.org</a>.
 </p>
 
 <p>
- <a NAME="Advisory Board"></a><b><u>Advisory Board</u></b>
+ <a NAME="Advisory Board"></a><b>Advisory Board</b>
  <br>In addition to the Foundation's Board of Directors, there is also an
  Advisory Board, made up of organizations and companies that are supporting
  GNOME. The Advisory Board has no decision-making authority but provides
  a vehicle for its members to communicate with the Board of Directors. Current
- Advisory Board members include <u>Borland</u>, <u>Compaq</u>, <u>Debian
- Project</u>, <u>Free Software Foundation</u>, <u>Gnumatic</u>,
- <u>Hewlett-Packard</u>, <u>IBM</u>, <u>MandrakeSoft, Object
- Management Group</u>, <u>Red Flag Linux</u>, <u>Red Hat</u>, <u>Sun 
- Microsystems</u>, <u>TurboLinux</u>, <u>VA Linux</u> and <u>Ximian</u>.
+ Advisory Board members include <em>Borland</em>, <em>Compaq</em>, <em>Debian
+ Project</em>, <em>Free Software Foundation</em>, <em>Gnumatic</em>,
+ <em>Hewlett-Packard</em>, <em>IBM</em>, <em>MandrakeSoft, Object
+ Management Group</em>, <em>Red Flag Linux</em>, <em>Red Hat</em>, <em>Sun 
+ Microsystems</em>, <em>TurboLinux</em>, <em>VA Linux</em> and <em>Ximian</em>.
 </p>
 
 <p>
- <a NAME="Membership"></a><b><u>Membership</u></b>
+ <a NAME="Membership"></a><b>Membership</b>
  <br>The Membership consists of all GNOME contributors who wish
  to become part of the Membership and go through the application 
  process.  Members can run for election to the Board of Directors,
@@ -105,8 +106,8 @@
 </p>
 
 <p>
- <a NAME="Other Foundation-Related Materials"></a><b><u>Other 
- Foundation-Related Materials:</u></b>
+ <a NAME="Other Foundation-Related Materials"></a><b>Other 
+ Foundation-Related Materials:</b>
 <ul>
 <div style="margin-bottom: 0in; "><a href="/elections.html">Complete
 election results and related materials</a></div>
